@@ -222,7 +222,7 @@ Melismata can be specified simply in the lyrics now, eg.
 
 @lilypond[relative=1,verbatim,fragment]
 {
-  c d( e) f e
+  c d( e) f e d
 } \addlyrics {
   Ky -- _ _ ri e
 }
